--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ pickleshare==0.7.5
 prometheus-client==0.11.0
 prompt-toolkit==3.0.19
 protobuf==3.19.4
+psycopg2==2.9.3
 ptyprocess==0.7.0
 pycparser==2.20
 Pygments==2.9.0
