--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.9"
 services:
   server:
-    build: ./
+    build: .
     ports:
       - "5000:5000"
     volumes:
-      - ./:/app
+      - .:/app
     environment:
       FLASK_ENV: development
